pine_script_references/v6/categories/constants.md
# Constants

## Variables

- `false`
- `true`

## Properties

- `adjustment.dividends`
- `adjustment.none`
- `adjustment.splits`
- `alert.freq_all`
- `alert.freq_once_per_bar`
- `alert.freq_once_per_bar_close`
- `backadjustment.inherit`
- `backadjustment.off`
- `backadjustment.on`
- `barmerge.gaps_off`
- `barmerge.gaps_on`
- `barmerge.lookahead_off`
- `barmerge.lookahead_on`
- `color.aqua`
- `color.black`
- `color.blue`
- `color.fuchsia`
- `color.gray`
- `color.green`
- `color.lime`
- `color.maroon`
- `color.navy`
- `color.olive`
- `color.orange`
- `color.purple`
- `color.red`
- `color.silver`
- `color.teal`
- `color.white`
- `color.yellow`
- `currency.AED`
- `currency.ARS`
- `currency.AUD`
- `currency.BDT`
- `currency.BHD`
- `currency.BRL`
- `currency.BTC`
- `currency.CAD`
- `currency.CHF`
- `currency.CLP`
- `currency.CNY`
- `currency.COP`
- `currency.CZK`
- `currency.DKK`
- `currency.EGP`
- `currency.ETH`
- `currency.EUR`
- `currency.GBP`
- `currency.HKD`
- `currency.HUF`
- `currency.IDR`
- `currency.ILS`
- `currency.INR`
- `currency.ISK`
- `currency.JPY`
- `currency.KES`
- `currency.KRW`
- `currency.KWD`
- `currency.LKR`
- `currency.MAD`
- `currency.MXN`
- `currency.MYR`
- `currency.NGN`
- `currency.NOK`
- `currency.NONE`
- `currency.NZD`
- `currency.PEN`
- `currency.PHP`
- `currency.PKR`
- `currency.PLN`
- `currency.QAR`
- `currency.RON`
- `currency.RSD`
- `currency.RUB`
- `currency.SAR`
- `currency.SEK`
- `currency.SGD`
- `currency.THB`
- `currency.TND`
- `currency.TRY`
- `currency.TWD`
- `currency.USD`
- `currency.USDT`
- `currency.VES`
- `currency.VND`
- `currency.ZAR`
- `dayofweek.friday`
- `dayofweek.monday`
- `dayofweek.saturday`
- `dayofweek.sunday`
- `dayofweek.thursday`
- `dayofweek.tuesday`
- `dayofweek.wednesday`
- `display.all`
- `display.data_window`
- `display.none`
- `display.pane`
- `display.price_scale`
- `display.status_line`
- `dividends.gross`
- `dividends.net`
- `earnings.actual`
- `earnings.estimate`
- `earnings.standardized`
- `extend.both`
- `extend.left`
- `extend.none`
- `extend.right`
- `font.family_default`
- `font.family_monospace`
- `format.inherit`
- `format.mintick`
- `format.percent`
- `format.price`
- `format.volume`
- `hline.style_dashed`
- `hline.style_dotted`
- `hline.style_solid`
- `label.style_arrowdown`
- `label.style_arrowup`
- `label.style_circle`
- `label.style_cross`
- `label.style_diamond`
- `label.style_flag`
- `label.style_label_center`
- `label.style_label_down`
- `label.style_label_left`
- `label.style_label_lower_left`
- `label.style_label_lower_right`
- `label.style_label_right`
- `label.style_label_up`
- `label.style_label_upper_left`
- `label.style_label_upper_right`
- `label.style_none`
- `label.style_square`
- `label.style_text_outline`
- `label.style_triangledown`
- `label.style_triangleup`
- `label.style_xcross`
- `line.style_arrow_both`
- `line.style_arrow_left`
- `line.style_arrow_right`
- `line.style_dashed`
- `line.style_dotted`
- `line.style_solid`
- `location.abovebar`
- `location.absolute`
- `location.belowbar`
- `location.bottom`
- `location.top`
- `math.e`
- `math.phi`
- `math.pi`
- `math.rphi`
- `order.ascending`
- `order.descending`
- `plot.style_area`
- `plot.style_areabr`
- `plot.style_circles`
- `plot.style_columns`
- `plot.style_cross`
- `plot.style_histogram`
- `plot.style_line`
- `plot.style_linebr`
- `plot.style_stepline`
- `plot.style_stepline_diamond`
- `plot.style_steplinebr`
- `position.bottom_center`
- `position.bottom_left`
- `position.bottom_right`
- `position.middle_center`
- `position.middle_left`
- `position.middle_right`
- `position.top_center`
- `position.top_left`
- `position.top_right`
- `scale.left`
- `scale.none`
- `scale.right`
- `session.extended`
- `session.regular`
- `settlement_as_close.inherit`
- `settlement_as_close.off`
- `settlement_as_close.on`
- `shape.arrowdown`
- `shape.arrowup`
- `shape.circle`
- `shape.cross`
- `shape.diamond`
- `shape.flag`
- `shape.labeldown`
- `shape.labelup`
- `shape.square`
- `shape.triangledown`
- `shape.triangleup`
- `shape.xcross`
- `size.auto`
- `size.huge`
- `size.large`
- `size.normal`
- `size.small`
- `size.tiny`
- `splits.denominator`
- `splits.numerator`
- `strategy.cash`
- `strategy.commission.cash_per_contract`
- `strategy.commission.cash_per_order`
- `strategy.commission.percent`
- `strategy.direction.all`
- `strategy.direction.long`
- `strategy.direction.short`
- `strategy.fixed`
- `strategy.long`
- `strategy.oca.cancel`
- `strategy.oca.none`
- `strategy.oca.reduce`
- `strategy.percent_of_equity`
- `strategy.short`
- `text.align_bottom`
- `text.align_center`
- `text.align_left`
- `text.align_right`
- `text.align_top`
- `text.format_bold`
- `text.format_italic`
- `text.format_none`
- `text.wrap_auto`
- `text.wrap_none`
- `xloc.bar_index`
- `xloc.bar_time`
- `yloc.abovebar`
- `yloc.belowbar`
- `yloc.price`

